# warehouseplus_gui

./: .gitignore  CMakeLists.txt  README.md  WarehousePlusGUI  build.bash  button_class.cpp  button_class.h  color_scheme.h  config.h  main.cpp  slider_struct.cpp
WarehousePlusGUI.dSYM/Contents/: Info.plist
WarehousePlusGUI.dSYM/Contents/Resources/Relocations/aarch64/: WarehousePlusGUI.yml
